works! (with weird error during eval.)

--- a/examples/MMLU-Pro/mmlu-pro-self-discover.ipynb
+++ b/examples/MMLU-Pro/mmlu-pro-self-discover.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 12\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcustom_answer_exact_match\u001b[39m(prediction, example, trace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m prediction\u001b[38;5;241m.\u001b[39manswer_index \u001b[38;5;241m==\u001b[39m example[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer_index\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      6\u001b[0m compiled \u001b[38;5;241m=\u001b[39m BootstrapFewShot(\n\u001b[1;32m      7\u001b[0m     metric\u001b[38;5;241m=\u001b[39mcustom_answer_exact_match,\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# num_threads=30,\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# num_candidate_programs=5,\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     max_labeled_demos\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m,\n\u001b[1;32m     11\u001b[0m )\u001b[38;5;241m.\u001b[39mcompile(\n\u001b[0;32m---> 12\u001b[0m     student\u001b[38;5;241m=\u001b[39m\u001b[43mCoTMMLU\u001b[49m(),\n\u001b[1;32m     13\u001b[0m     trainset\u001b[38;5;241m=\u001b[39mtry10ex,\n\u001b[1;32m     14\u001b[0m )\n",
+      "Cell \u001b[0;32mIn[66], line 12\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcustom_answer_exact_match\u001b[39m(prediction, example, trace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m prediction\u001b[38;5;241m.\u001b[39manswer_index \u001b[38;5;241m==\u001b[39m example[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer_index\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      6\u001b[0m compiled \u001b[38;5;241m=\u001b[39m BootstrapFewShot(\n\u001b[1;32m      7\u001b[0m     metric\u001b[38;5;241m=\u001b[39mcustom_answer_exact_match,\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# num_threads=30,\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# num_candidate_programs=5,\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     max_labeled_demos\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m,\n\u001b[1;32m     11\u001b[0m )\u001b[38;5;241m.\u001b[39mcompile(\n\u001b[0;32m---> 12\u001b[0m     student\u001b[38;5;241m=\u001b[39m\u001b[43mCoTMMLU\u001b[49m(),\n\u001b[1;32m     13\u001b[0m     trainset\u001b[38;5;241m=\u001b[39mtry10ex,\n\u001b[1;32m     14\u001b[0m )\n",
       "\u001b[0;31mNameError\u001b[0m: name 'CoTMMLU' is not defined"
      ]
     }
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1598,23 +1598,7 @@
     {
      "data": {
       "text/plain": [
-       "{'steps': [{'step': 1,\n",
-       "   'answer': 'Identify the key assumptions underlying the problem, such as the isotopic labeling and the non-overlapping lines.'},\n",
-       "  {'step': 2,\n",
-       "   'answer': 'Break down the problem into smaller parts, such as understanding the hyperfine interactions in the EPR spectrum.'},\n",
-       "  {'step': 3,\n",
-       "   'answer': 'Analyze the problem from different perspectives, question assumptions, and evaluate the evidence.'},\n",
-       "  {'step': 4,\n",
-       "   'answer': 'Determine the underlying causes or factors contributing to the problem, such as the number of interacting nuclei.'},\n",
-       "  {'step': 5,\n",
-       "   'answer': 'Identify potential obstacles or challenges, such as the complexity of the hyperfine splitting patterns.'},\n",
-       "  {'step': 6,\n",
-       "   'answer': 'Assess the potential risks and drawbacks of each solution, such as misinterpreting the number of lines.'},\n",
-       "  {'step': 7,\n",
-       "   'answer': 'Consider alternative perspectives or viewpoints, such as different isotopic labeling scenarios.'},\n",
-       "  {'step': 8,\n",
-       "   'answer': 'Evaluate the long-term implications of the problem and its solutions, such as the impact on future EPR studies.'}],\n",
-       " 'conclusion': {'answer': '6'}}"
+       "\"{'steps': [{'step': 1, 'answer': 'Identify the key assumptions underlying the problem, such as the isotopic labeling and the non-overlapping lines.'}, {'step': 2, 'answer': 'Break down the problem into smaller parts, such as understanding the hyperfine interactions in the EPR spectrum.'}, {'step': 3, 'answer': 'Analyze the problem from different perspectives, question assumptions, and evaluate the evidence.'}, {'step': 4, 'answer': 'Determine the underlying causes or factors contributing to the problem, such as the number of interacting nuclei.'}, {'step': 5, 'answer': 'Identify potential obstacles or challenges, such as the complexity of the hyperfine splitting patterns.'}, {'step': 6, 'answer': 'Assess the potential risks and drawbacks of each solution, such as misinterpreting the number of lines.'}, {'step': 7, 'answer': 'Consider alternative perspectives or viewpoints, such as different isotopic labeling scenarios.'}, {'step': 8, 'answer': 'Evaluate the long-term implications of the problem and its solutions, such as the impact on future EPR studies.'}], 'conclusion': {'answer': '6'}}\""
       ]
      },
      "metadata": {},
@@ -1654,18 +1638,20 @@
     "        selected_modules = self.select_modules(question, reasoning_modules).selected_modules\n",
     "        adapted_modules = self.adapt_modules(selected_modules, question).adapted_modules\n",
     "        reasoning_structure = self.implement_structure(adapted_modules, question).reasoning_structure\n",
-    "        prediction = self.solver(question, reasoning_structure, options)\n",
-    "        return prediction.solution, prediction.answer_index\n",
+    "        result = self.solver(question, reasoning_structure, options)\n",
+    "        return dspy.Prediction(answer_index=str(result.answer_index), solution=str(result.solution))\n",
+    "        # prediction = self.solver(question, reasoning_structure, options)\n",
+    "        # return prediction.solution, str(prediction.answer_index)\n",
     "\n",
     "combined_module = CombinedModule()\n",
     "\n",
-    "try1_solution, try1_answer_index = combined_module(try10test[0].question, try10test[0].options)\n",
+    "try1 = combined_module(try10test[0].question, try10test[0].options)\n",
     "# display(try1_solution)\n",
     "display(\"question\" + try10test[0].question)\n",
     "display(\"options\" + try10test[0].options)\n",
     "display(\"correct answer_index: \" + try10test[0].answer_index)\n",
-    "display(\"predicted solution: \", try1_solution)\n",
-    "display(\"predicted answer_index: \", try1_answer_index)\n",
+    "display(\"predicted solution: \", try1.solution)\n",
+    "display(\"predicted answer_index: \", try1.answer_index)\n",
     "\n",
     "# Evaluation code (same as before)\n",
     "# evaluate = Evaluate(devset=try10test, metric=custom_answer_exact_match, num_threads=25, display_progress=True, display_table=10)\n",
@@ -1674,51 +1660,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error for example in dev set: \t\t tuple indices must be integers or slices, not str\n",
-      "Error for example in dev set: \t\t tuple indices must be integers or slices, not str\n",
-      "Error for example in dev set: \t\t tuple indices must be integers or slices, not str\n",
-      "Error for example in dev set: \t\t tuple indices must be integers or slices, not str\n",
-      "Failed to load solution: Expecting value: line 1 column 1 (char 0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[A\n",
-      "\u001b[A"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "tuple indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[56], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Evaluation code (same as before)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m evaluate \u001b[38;5;241m=\u001b[39m Evaluate(devset\u001b[38;5;241m=\u001b[39mtry10test, metric\u001b[38;5;241m=\u001b[39mcustom_answer_exact_match, num_threads\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m25\u001b[39m, display_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, display_table\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mevaluate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcombined_module\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.0/envs/my-env310/lib/python3.10/site-packages/dspy/evaluate/evaluate.py:163\u001b[0m, in \u001b[0;36mEvaluate.__call__\u001b[0;34m(self, program, metric, devset, num_threads, display_progress, display_table, display, return_all_scores, return_outputs)\u001b[0m\n\u001b[1;32m    160\u001b[0m     reordered_devset, ncorrect, ntotal \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_execute_single_thread(\n\u001b[1;32m    161\u001b[0m         wrapped_program, devset, display_progress)\n\u001b[1;32m    162\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 163\u001b[0m     reordered_devset, ncorrect, ntotal \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execute_multi_thread\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    164\u001b[0m \u001b[43m        \u001b[49m\u001b[43mwrapped_program\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    165\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdevset\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    166\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnum_threads\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    167\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdisplay_progress\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    168\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    169\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_outputs:  \u001b[38;5;66;03m# Handle the return_outputs logic\u001b[39;00m\n\u001b[1;32m    170\u001b[0m     results \u001b[38;5;241m=\u001b[39m [(example, prediction, score)\n\u001b[1;32m    171\u001b[0m                \u001b[38;5;28;01mfor\u001b[39;00m _, example, prediction, score \u001b[38;5;129;01min\u001b[39;00m reordered_devset]\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.0/envs/my-env310/lib/python3.10/site-packages/dspy/evaluate/evaluate.py:82\u001b[0m, in \u001b[0;36mEvaluate._execute_multi_thread\u001b[0;34m(self, wrapped_program, devset, num_threads, display_progress)\u001b[0m\n\u001b[1;32m     78\u001b[0m pbar \u001b[38;5;241m=\u001b[39m tqdm\u001b[38;5;241m.\u001b[39mtqdm(total\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(devset), dynamic_ncols\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     79\u001b[0m                  disable\u001b[38;5;241m=\u001b[39m\u001b[38;5;129;01mnot\u001b[39;00m display_progress)\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m future \u001b[38;5;129;01min\u001b[39;00m as_completed(futures):\n\u001b[0;32m---> 82\u001b[0m     example_idx, example, prediction, score \u001b[38;5;241m=\u001b[39m \u001b[43mfuture\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     83\u001b[0m     reordered_devset\u001b[38;5;241m.\u001b[39mappend(\n\u001b[1;32m     84\u001b[0m         (example_idx, example, prediction, score))\n\u001b[1;32m     85\u001b[0m     ncorrect \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m score\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.0/lib/python3.10/concurrent/futures/_base.py:438\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    436\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CancelledError()\n\u001b[1;32m    437\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;241m==\u001b[39m FINISHED:\n\u001b[0;32m--> 438\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__get_result\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    440\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_condition\u001b[38;5;241m.\u001b[39mwait(timeout)\n\u001b[1;32m    442\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;129;01min\u001b[39;00m [CANCELLED, CANCELLED_AND_NOTIFIED]:\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.0/lib/python3.10/concurrent/futures/_base.py:390\u001b[0m, in \u001b[0;36mFuture.__get_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    388\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception:\n\u001b[1;32m    389\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 390\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception\n\u001b[1;32m    391\u001b[0m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    392\u001b[0m         \u001b[38;5;66;03m# Break a reference cycle with the exception in self._exception\u001b[39;00m\n\u001b[1;32m    393\u001b[0m         \u001b[38;5;28mself\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.0/lib/python3.10/concurrent/futures/thread.py:52\u001b[0m, in \u001b[0;36m_WorkItem.run\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 52\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mBaseException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfuture\u001b[38;5;241m.\u001b[39mset_exception(exc)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.0/envs/my-env310/lib/python3.10/site-packages/dspy/evaluate/evaluate.py:150\u001b[0m, in \u001b[0;36mEvaluate.__call__.<locals>.wrapped_program\u001b[0;34m(example_idx, example)\u001b[0m\n\u001b[1;32m    148\u001b[0m     current_error_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39merror_count\n\u001b[1;32m    149\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m current_error_count \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_errors:\n\u001b[0;32m--> 150\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError for example in dev set: \u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m example_idx, example, \u001b[38;5;28mdict\u001b[39m(), \u001b[38;5;241m0.0\u001b[39m\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.0/envs/my-env310/lib/python3.10/site-packages/dspy/evaluate/evaluate.py:133\u001b[0m, in \u001b[0;36mEvaluate.__call__.<locals>.wrapped_program\u001b[0;34m(example_idx, example)\u001b[0m\n\u001b[1;32m    131\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    132\u001b[0m     prediction \u001b[38;5;241m=\u001b[39m program(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mexample\u001b[38;5;241m.\u001b[39minputs())\n\u001b[0;32m--> 133\u001b[0m     score \u001b[38;5;241m=\u001b[39m \u001b[43mmetric\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    134\u001b[0m \u001b[43m        \u001b[49m\u001b[43mexample\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    135\u001b[0m \u001b[43m        \u001b[49m\u001b[43mprediction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    136\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# FIXME: TODO: What's the right order? Maybe force name-based kwargs!\u001b[39;00m\n\u001b[1;32m    138\u001b[0m     \u001b[38;5;66;03m# increment assert and suggest failures to program's attributes\u001b[39;00m\n\u001b[1;32m    139\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(program, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_assert_failures\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
-      "Cell \u001b[0;32mIn[27], line 4\u001b[0m, in \u001b[0;36mcustom_answer_exact_match\u001b[0;34m(prediction, example, trace)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcustom_answer_exact_match\u001b[39m(prediction, example, trace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m prediction\u001b[38;5;241m.\u001b[39manswer_index \u001b[38;5;241m==\u001b[39m \u001b[43mexample\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43manswer_index\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Evaluation code (same as before)\n",
+    "# Evaluation code\n",
+    "\n",
     "evaluate = Evaluate(devset=try10test, metric=custom_answer_exact_match, num_threads=25, display_progress=True, display_table=10)\n",
     "evaluate(combined_module)"
    ]
