save before moving to experiments

--- a/examples/MMLU-Pro/mmlu-pro-self-discovery.ipynb
+++ b/examples/MMLU-Pro/mmlu-pro-self-discovery.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "playing around with mmlu pro https://huggingface.co/datasets/TIGER-Lab/MMLU-Pro"
+    "playing around with mmlu pro https://huggingface.co/datasets/TIGER-Lab/MMLU-Pro \n",
+    "\n",
+    "does the self-discovery approach improve performance?\n",
+    "https://colab.research.google.com/drive/1GkAQKmw1XQgg5UNzzy8OncRe79V6pADB?usp=sharing\n",
+    "https://arxiv.org/pdf/2402.03620.pdf"
    ]
   },
   {
@@ -179,13 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "dl = DataLoader()\n",
     "mmlu_pro = dl.from_huggingface(\"TIGER-Lab/MMLU-Pro\")\n",
     "validation = mmlu_pro['validation']\n",
+    "mmlu_test_set = mmlu_pro['test']\n",
     "#display(validation)\n",
     "\n"
    ]
@@ -272,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,16 +320,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample Question: Why are parvoviruses a highly impactful parasite?\n",
-      "Options: [\"They are able to alter the host's DNA\", 'Because they have no nucleic acid', 'They can survive in extreme temperatures', 'Only replicate in dividing cells', 'They can infect multiple species', \"They don't require a host to survive\", 'Can integrate into host chromosomes', 'N/A', 'N/A', 'N/A']\n",
-      "Answer Index: 1\n"
+      "Sample Question: Which of the following is not known to be involved in the control of cell division?\n",
+      "Options: ['Microtubules', 'Checkpoints', 'DNA polymerase', 'Centrosomes', 'Cyclins', 'Mitochondria', 'Protein kinases', 'Fibroblast cells', 'N/A', 'N/A']\n",
+      "Answer Index: 7\n"
      ]
     }
    ],
@@ -342,15 +347,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Prediction(\n",
-       "    answer_index='3',\n",
-       "    cot_content='Parvoviruses are highly impactful because they can only replicate in dividing cells. This dependency on host cell division means that they can cause significant damage to tissues where cells are rapidly dividing. For example, in dogs, canine parvovirus targets the rapidly dividing cells in the intestines, leading to severe gastrointestinal illness. In humans, parvovirus B19 targets erythroid progenitor cells in the bone marrow, which can lead to conditions like anemia. This specific replication requirement is a key factor in their pathogenicity.'\n",
+       "    answer_index='5',\n",
+       "    cot_content='Based on the above reasoning, mitochondria are primarily involved in energy production and not directly in the control of cell division. Therefore, the correct answer is mitochondria.'\n",
        ")"
       ]
      },
@@ -384,18 +389,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'CoTMMLU' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[66], line 12\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcustom_answer_exact_match\u001b[39m(prediction, example, trace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m prediction\u001b[38;5;241m.\u001b[39manswer_index \u001b[38;5;241m==\u001b[39m example[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer_index\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      6\u001b[0m compiled \u001b[38;5;241m=\u001b[39m BootstrapFewShot(\n\u001b[1;32m      7\u001b[0m     metric\u001b[38;5;241m=\u001b[39mcustom_answer_exact_match,\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# num_threads=30,\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# num_candidate_programs=5,\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     max_labeled_demos\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m,\n\u001b[1;32m     11\u001b[0m )\u001b[38;5;241m.\u001b[39mcompile(\n\u001b[0;32m---> 12\u001b[0m     student\u001b[38;5;241m=\u001b[39m\u001b[43mCoTMMLU\u001b[49m(),\n\u001b[1;32m     13\u001b[0m     trainset\u001b[38;5;241m=\u001b[39mtry10ex,\n\u001b[1;32m     14\u001b[0m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'CoTMMLU' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 4/10 [00:17<00:25,  4.33s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 4 full traces after 5 examples in round 0.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1659,15 +1674,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now for the moment of truth: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluation code\n",
+    "def get_random_examples(num):\n",
+    "    import random\n",
+    "    from dspy.datasets import DataLoader\n",
     "\n",
-    "evaluate = Evaluate(devset=try10test, metric=custom_answer_exact_match, num_threads=25, display_progress=True, display_table=10)\n",
-    "evaluate(combined_module)"
+    "    dl = DataLoader()\n",
+    "    mmlu_pro = dl.from_huggingface(\"TIGER-Lab/MMLU-Pro\")\n",
+    "    mmlu_test_set = mmlu_pro['test']\n",
+    "\n",
+    "    examples = [example.with_inputs(\"question\", \"options\") for example in random.sample(mmlu_test_set, num)]\n",
+    "    for ex in examples:\n",
+    "        ex['options'] = str(ex['options'])\n",
+    "        ex['answer_index'] = str(ex['answer_index'])\n",
+    "    return examples\n",
+    "\n",
+    "eval_set = get_random_examples(20)\n",
+    "display(eval_set)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'first eval the uncompiled'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 18 / 20  (90.0): 100%|██████████| 20/20 [00:00<00:00, 1357.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 18 / 20  (90.0%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'now eval the CoT'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 17 / 20  (85.0): 100%|██████████| 20/20 [00:00<00:00, 551.60it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 17 / 20  (85.0%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "85.0"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluation code\n",
+    "os.environ['DSP_CACHEBOOL'] = 'False' #make sure we are not caching\n",
+    "evaluate = Evaluate(devset=eval_set, metric=custom_answer_exact_match, num_threads=25, display_progress=True)\n",
+    "display(\"first eval the uncompiled\")\n",
+    "evaluate(uncompiled)\n",
+    "display(\"now eval the CoT\")\n",
+    "evaluate(compiled)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'now eval the combined self-discovery '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to load solution: Expecting value: line 1 column 1 (char 0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 11 / 20  (55.0): 100%|██████████| 20/20 [01:15<00:00,  3.76s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 11 / 20  (55.0%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "55.0"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "display(\"now eval the combined self-discovery \")\n",
+    "evaluate(combined_module)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so far, the self-discovery modules seems to be notably worse than chain of thought at MMLU Pro"
    ]
   },
   {
