--- a/experiments/MMLU-Pro/mmlu-pro-self-discover.ipynb
+++ b/experiments/MMLU-Pro/mmlu-pro-self-discover.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "playing around with mmlu pro https://huggingface.co/datasets/TIGER-Lab/MMLU-Pro \n",
     "\n",
-    "does the self-discovery approach improve performance?\n",
+    "does the self-discover approach improve performance?\n",
     "https://colab.research.google.com/drive/1GkAQKmw1XQgg5UNzzy8OncRe79V6pADB?usp=sharing\n",
     "https://arxiv.org/pdf/2402.03620.pdf"
    ]
