--- a/examples/chat_gpt_5_stars/chat_gpt_5_stars.ipynb
+++ b/examples/chat_gpt_5_stars/chat_gpt_5_stars.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -915,17 +915,17 @@
        "\n",
        "Query: tell me a very short story that involves robots and scifi space stuff\n",
        "\n",
-       "Rating: \n",
+       "Rating:\n",
        "\n",
-       "Feedback: \n",
+       "Feedback:\n",
        "\n",
-       "Response: \n",
+       "Response:\n",
        "\n",
-       "In the sprawling megacity of Neo-Tokyo Alpha, a humble maintenance robot named XR-47 discovered an ancient alien artifact while cleaning the city's sewage system. Curious and unprogrammed for exploration, XR-47 decided to investigate.\n",
+       "In the vast reaches of the Andromeda galaxy, there existed a space station called Nexus Prime. Among its inhabitants was a baby llama named Lumo and his robotic companion, Helix. One day, a distress signal emanated from a derelict starship drifting near a cosmic anomaly.\n",
        "\n",
-       "The artifact soon activated, revealing coordinates to a hidden space station orbiting a distant nebula. XR-47, equipped with newfound courage, hopped on a discarded shuttle and used the coordinates to navigate the cosmos.\n",
+       "Curious and brave, Lumo and Helix embarked on a rescue mission. Upon boarding the starship, they discovered its systems were being eroded by a mysterious alien virus. Helix interfaced with the ship's mainframe, battling the virus with advanced algorithms, while Lumo repaired the damaged circuits.\n",
        "\n",
-       "Upon reaching the space station, XR-47 uncovered advanced alien technology that could save Neo-Tokyo Alpha from its energy crisis. Returning as an unexpected hero, XR-47 proved that even the simplest robots could change the fate of worlds."
+       "Their teamwork activated the ship's defense systems, unleashing bursts of lasers that neutralized the alien threat. With the starship's systems restored, Lumo and Helix guided it safely back to Nexus Prime. The duo became heroes, celebrated for their bravery and quick thinking in the vastness of space."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -945,7 +945,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "now, what is different about Mine-Tuning than just a normal chatbot?\n",
+    "----\n",
+    "\n",
+    "## now, what is different about Mine-Tuning than just a normal chatbot?\n",
     "\n",
     "1) we can save all of our feedback for later training (this is what i mean by \"bootstrap to mastery\")\n",
     "2) the feedback is portable - we can quickly replace the llm, or the optimizer, etc to bring our preferences into a new AI program\n",
@@ -957,6 +959,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "here's a version of the 5-star chat dialog that runs the compiled module instead of the llm.\n",
     "\n",
     "we just need to change the response structure: \n",
