chat history wasn't properly interleaved

--- a/examples/chat_gpt_5_stars/chat_gpt_5_stars.ipynb
+++ b/examples/chat_gpt_5_stars/chat_gpt_5_stars.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +73,10 @@
     "        raw_kwargs = kwargs\n",
     "\n",
     "        # Prepare the messages with history\n",
-    "        messages = [{\"role\": \"user\", \"content\": entry[\"prompt\"]} for entry in self.history]\n",
-    "        messages += [{\"role\": \"assistant\", \"content\": self._get_choice_text(entry[\"response\"][\"choices\"][0])} for entry in self.history]\n",
+    "        messages = []\n",
+    "        for entry in self.history:\n",
+    "            messages.append({\"role\": \"user\", \"content\": entry[\"prompt\"]})\n",
+    "            messages.append({\"role\": \"assistant\", \"content\": self._get_choice_text(entry[\"response\"][\"choices\"][0])})\n",
     "        \n",
     "        #if we want the bot to see the rating and feedback, append them to the prompt\n",
     "        if self.show_feedback:\n",
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +186,7 @@
     {
      "data": {
       "text/markdown": [
-       "In a peaceful village, 12 kind hearts met another 12 kind hearts, creating a community of 24 caring souls. Together, they built a beautiful garden where laughter and love blossomed. The village thrived, showing that when people unite, magic happens."
+       "In a quaint village, twelve children discovered twelve golden keys buried in a field. Together, they unlocked a magnificent treasure chest filled with 24 sparkling jewels. The entire village celebrated, grateful for the children's teamwork and their newfound wealth."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -206,26 +208,26 @@
      "data": {
       "text/plain": [
        "[{'prompt': 'now tell me a very short story based on the answer of the first message, ideally a 3 sentence story',\n",
-       "  'response': {'id': 'chatcmpl-9SP2CTz7FII7T6op9hAbNgwrkZqVK',\n",
+       "  'response': {'id': 'chatcmpl-9SRTjx2YWyrJDnveUA9LcBXPO2HEI',\n",
        "   'choices': [{'finish_reason': 'stop',\n",
        "     'index': 0,\n",
        "     'logprobs': None,\n",
-       "     'message': {'content': 'In a peaceful village, 12 kind hearts met another 12 kind hearts, creating a community of 24 caring souls. Together, they built a beautiful garden where laughter and love blossomed. The village thrived, showing that when people unite, magic happens.',\n",
+       "     'message': {'content': \"In a quaint village, twelve children discovered twelve golden keys buried in a field. Together, they unlocked a magnificent treasure chest filled with 24 sparkling jewels. The entire village celebrated, grateful for the children's teamwork and their newfound wealth.\",\n",
        "      'role': 'assistant',\n",
        "      'function_call': None,\n",
        "      'tool_calls': None}}],\n",
-       "   'created': 1716556444,\n",
+       "   'created': 1716565839,\n",
        "   'model': 'gpt-4o-2024-05-13',\n",
        "   'object': 'chat.completion',\n",
        "   'system_fingerprint': 'fp_729ea513f7',\n",
-       "   'usage': {'completion_tokens': 53,\n",
+       "   'usage': {'completion_tokens': 46,\n",
        "    'prompt_tokens': 83,\n",
-       "    'total_tokens': 136}},\n",
-       "  'kwargs': {'stringify_request': '{\"messages\": [{\"role\": \"user\", \"content\": \"tell me what is 12+12?\"}, {\"role\": \"user\", \"content\": \"what was my last message?\"}, {\"role\": \"assistant\", \"content\": \"12 + 12 equals 24.\"}, {\"role\": \"assistant\", \"content\": \"Your last message was: \\\\\"tell me what is 12+12?\\\\\"\"}, {\"role\": \"user\", \"content\": \"now tell me a very short story based on the answer of the first message, ideally a 3 sentence story\"}], \"model\": \"gpt-4o\"}'},\n",
+       "    'total_tokens': 129}},\n",
+       "  'kwargs': {'stringify_request': '{\"messages\": [{\"role\": \"user\", \"content\": \"tell me what is 12+12?\"}, {\"role\": \"assistant\", \"content\": \"12 + 12 equals 24.\"}, {\"role\": \"user\", \"content\": \"what was my last message?\"}, {\"role\": \"assistant\", \"content\": \"Your last message was: \\\\\"tell me what is 12+12?\\\\\"\"}, {\"role\": \"user\", \"content\": \"now tell me a very short story based on the answer of the first message, ideally a 3 sentence story\"}], \"model\": \"gpt-4o\"}'},\n",
        "  'raw_kwargs': {'messages': [{'role': 'user',\n",
        "     'content': 'tell me what is 12+12?'},\n",
-       "    {'role': 'user', 'content': 'what was my last message?'},\n",
        "    {'role': 'assistant', 'content': '12 + 12 equals 24.'},\n",
+       "    {'role': 'user', 'content': 'what was my last message?'},\n",
        "    {'role': 'assistant',\n",
        "     'content': 'Your last message was: \"tell me what is 12+12?\"'},\n",
        "    {'role': 'user',\n",
