aider did this from #1

--- a/examples/chat_gpt_5_stars/chat_gpt_5_stars.ipynb
+++ b/examples/chat_gpt_5_stars/chat_gpt_5_stars.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/rawwerks/MineTuning/blob/main/examples/chat_gpt_5_stars/chat_gpt_5_stars.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "a mine-tuning take on the \"ChatGPT\"-style chatbot UX, with quantitative and qualitative feedback at each interaction: 5-star rating and feedback "
    ]
   },
