--- a/examples/sense_of_humor/sense_of_humor.ipynb
+++ b/examples/sense_of_humor/sense_of_humor.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/rawwerks/MineTuning/blob/main/examples/sense_of_humor/sense_of_humor.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "In this example notebook, we mine-tune an AI program's sense of humor, by giving it feedback on its jokes. Run the cells in order"
    ]
   },
