--- a/examples/999999999_designs/999999999-designs.ipynb
+++ b/examples/999999999_designs/999999999-designs.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/rawwerks/MineTuning/blob/main/examples/999999999_designs/999999999-designs.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "why bother learning how to prompt an image generation model when we can mine-tune a LM to do that for us?"
    ]
   },
