--- a/examples/brand_voice/brand_voice.ipynb
+++ b/examples/brand_voice/brand_voice.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/rawwerks/MineTuning/blob/main/examples/brand_voice/brand_voice.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "mine-tune an AI program to respond using your \"brand voice\"."
    ]
   },
