--- a/experiments/MMLU-Pro/mmlu-pro-self-discover.ipynb
+++ b/experiments/MMLU-Pro/mmlu-pro-self-discover.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/rawwerks/MineTuning/blob/main/experiments/MMLU-Pro/Reference/Self_Discover_Implementation_Using_DSPy.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "playing around with mmlu pro https://huggingface.co/datasets/TIGER-Lab/MMLU-Pro \n",
     "\n",
     "does the self-discover approach improve performance?\n",
